🎨 Improves UI components and fixes issues
Enhances UI components such as buttons, checkboxes, and radio buttons for better styling and functionality.

Fixes animation issues and improves layout for better user experience.

The changes include:
- Replaces margin-left with transform: translateX for smoother animations.
- Adds color and textColor properties to the Button component.
- Improves Checkbox and RadioButton components for better text handling.
- Fixes layout issues in HeaderSelection and MenuCreateProblem components.
- Implements user data handling in the auth.local.ts.

--- a/src/app.css
+++ b/src/app.css
@@ -211,12 +211,14 @@ svg {
 
 @keyframes slide-in {
 	0% {
-		margin-left: 10px;
+		transform: translateX(10px);
+		/* margin-left: 10px; */
 		opacity: 0;
 	}
 
 	100% {
-		margin-left: 0px;
+		transform: translateX(0px);
+		/* margin-left: 0px; */
 		opacity: 1;
 	}
 }
